--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,8 +24,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/rahuldbohra57/kubernetes-cicd-tutorial:latest
+            ghcr.io/rahuldbohra57/kubernetes-cicd-tutorial:${{ github.sha }}
       - name: Update GitOps repository
         shell: bash
         env:
